// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<LinkButton /> > renders as expected based on provided props 1`] = `
<button
  class="inline-flex rounded-md focus-ring text-lm-brand dark:text-dm-brand highlight:text-lm-brand-dark dark:highlight:text-dm-brand-dark highlight:underline px-3 py-1.5 cursor-pointer"
  type="button"
/>
`;

exports[`<LinkButton /> > renders as expected based on provided props 2`] = `
<button
  class="inline-flex rounded-md focus-ring text-lm-brand dark:text-dm-brand highlight:text-lm-brand-dark dark:highlight:text-dm-brand-dark highlight:underline px-3 py-1.5 pointer-events-none opacity-65"
  disabled=""
  type="button"
/>
`;

exports[`<LinkButton /> > renders as expected based on provided props 3`] = `
<button
  class="inline-flex rounded-md focus-ring text-lm-brand dark:text-dm-brand highlight:text-lm-brand-dark dark:highlight:text-dm-brand-dark highlight:underline px-1.5 py-1 text-sm cursor-pointer"
  type="button"
/>
`;

exports[`<LinkButton /> > renders as expected based on provided props 4`] = `
<button
  class="inline-flex rounded-md focus-ring text-lm-brand dark:text-dm-brand highlight:text-lm-brand-dark dark:highlight:text-dm-brand-dark highlight:underline px-3 py-1.5 cursor-pointer"
  type="button"
/>
`;

exports[`<LinkButton /> > renders as expected based on provided props 5`] = `
<button
  class="inline-flex rounded-md focus-ring text-lm-brand dark:text-dm-brand highlight:text-lm-brand-dark dark:highlight:text-dm-brand-dark highlight:underline px-4 py-2 text-lg cursor-pointer"
  type="button"
/>
`;
